# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")
import("//test/xts/device_attest/services/core/attestsource.gni")

ohos_unittest("device_attest_tdd") {
  module_out_path = devattest_unittest_module_path
  cflags = [ "-Wall" ]
  defines = [ "ATTEST_HILOG_LEVEL = 1" ]
  defines += [ "MBEDTLS_ALLOW_PRIVATE_ACCESS" ]
  defines += [ "OPENSSL_SUPPRESS_DEPRECATED" ]
  include_dirs = include_core_dirs
  include_dirs += [
    ".",
    "./include",
    "${devattest_path}/services/core",
    "${devattest_path}/interfaces/innerkits/native_cpp/include",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
  ]
  sources = [
    "${devattest_path}/services/devattest_ability/src/attest_result_info.cpp",
    "./src/attest_tdd_data_transfer.c",
    "./src/attest_tdd_mock_hal.c",
    "./src/attest_tdd_mock_property.c",
    "./src/attest_tdd_test.cpp",
  ]
  sources += sources_notmock
  sources -= [ "${devattest_path}/services/core/adapter/attest_adapter.c" ]
  sources -=
      [ "${devattest_path}/services/core/security/attest_security_ticket.c" ]
  deps = core_deps
  external_deps = core_external_deps

  subsystem_name = "xts"
  part_name = "device_attest"
}
